# fungible-token-standard

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  Cargo.toml  GitVersion.yml  Makefile  README.md  Thinking-in-dft.md  dfx.json
.github/: labeler.yml
.github/workflows/: build.yml  release.yml  run_integration_test.yml
canisters/dft/: Cargo.toml
canisters/dft/src/: storage.rs  token.did  token.rs  types.rs  utils.rs
canisters/dft_motoko/: main.mo  types.mo
canisters/dft_motoko/utils/: AccountIdentifier.mo  PrincipalExt.mo
canisters/dft_rs/: Cargo.toml
canisters/dft_rs/src/: extends.rs  lib.rs  standard.did  standard.rs  token.did  token.rs  types.rs
canisters/dft_rs_types/: Cargo.toml
canisters/dft_rs_types/src/: account_identifier.rs  call_data.rs  fee.rs  key_value_pair.rs  lib.rs  metadata.rs  token_holder.rs  token_info.rs  transcation_result.rs  tx_record.rs
canisters/dft_rs_utils/: Cargo.toml
canisters/dft_rs_utils/src/: tx_id.rs
canisters/dft_tx_storage/: Cargo.toml
canisters/dft_tx_storage/src/: lib.rs  storage.did  storage.rs
canisters/graphql/: Cargo.toml
canisters/graphql/src/: graphql.did  lib.rs  schema.graphql
git_hooks/: clippy.sh  fix.sh  format.sh
motoko/: Makefile  dfx.json
motoko/dft/: types.mo
motoko/dft/utils/: PrincipalExt.mo
rust/: Cargo.toml  Makefile  cucumber.js  dfx.json  it_dev.sh  itt.sh  package-lock.json  package.json  sh_build.sh  sh_did.sh  sh_generate.sh  sh_go.sh  sh_package.sh  sh_reinstall.sh  sh_setup_dev.sh  tasks.py  tsconfig.json
rust/.devcontainer/: Dockerfile  devcontainer.json
rust/dft/: Cargo.toml
rust/dft/src/: ic_management.rs  lib.rs  standard.did  standard.rs
rust/dft_basic/: Cargo.toml
rust/dft_basic/src/: auto_scaling_storage.rs  basic.did  basic.rs  http.rs  lib.rs  management.rs  standard.did  state.rs
rust/dft_burnable/: Cargo.toml
rust/dft_burnable/src/: auto_scaling_storage.rs  basic.rs  burnable.did  burnable.rs  http.rs  lib.rs  management.rs  token.rs
rust/dft_derive/: Cargo.toml
rust/dft_derive/src/: func.rs  lib.rs
rust/dft_mintable/: Cargo.toml
rust/dft_mintable/src/: basic.rs  http.rs  inspect.rs  lib.rs  mintable.did  mintable.rs  token.rs
rust/dft_receiver/: Cargo.toml
rust/dft_receiver/src/: lib.rs  receiver.did  receiver.rs
rust/dft_source/: Cargo.toml
rust/dft_source/src/: lib.rs  standard.did  standard.rs
rust/dft_standard/: Cargo.toml
rust/dft_standard/src/: auto_scaling_storage.rs  http.rs  ic_management.rs  inspect.rs  lib.rs  management.rs  standard_copy.rs  state.rs  token.rs
rust/dft_tx_storage/: Cargo.toml
rust/dft_tx_storage/src/: actor.rs  lib.rs  state.rs  storage.did  storage.rs
rust/dft_types/: Cargo.toml
rust/dft_types/src/: actor_response.rs  constants.rs  desc_keys.rs  errors.rs  extend_keys.rs  fee.rs  http.rs  lib.rs  message.rs  metadata.rs  token_holder.rs  token_metrics.rs  token_payload.rs  transaction_result.rs  (+2 more)
rust/dft_utils/: Cargo.toml
rust/scripts/: buildAll.ts  build_all.ts  createIdentities.ts  createPackage.ts  create_identities.ts  create_package.ts  generate.ts  reinstall_all.ts  update_did.ts  update_local_configs.ts
src/: .npmrc  Cargo.toml  cucumber.js  dfx.json  dfx_package.json  ic-dev-kit.json  package-lock.json  package.json  rust-toolchain.toml  sh_build.sh  sh_chmod.sh  sh_generate.sh  sh_package.sh  sh_post_container_created.sh  sh_publish.sh  sh_setup_dev.sh  start_clean.sh  tasks.py  tsconfig.json
src/.devcontainer/: Dockerfile  devcontainer.json
src/dft/: Cargo.toml
src/dft_basic/: Cargo.toml  README.md  build.rs
src/dft_basic/src/: auto_scaling_storage.rs  basic.did  basic.rs  http.rs  ic_management.rs  inspect.rs  lib.rs  management.rs  state.rs
src/dft_basic/src/auto_scaling_storage/: tests.rs
src/dft_basic/src/canister_api/: dft_tx_storage.rs  ic_management.rs  mod.rs  transfer_notify.rs
src/dft_basic/src/service/: basic_service.rs  management_service.rs  mod.rs
src/dft_burnable/: Cargo.toml  build.rs
src/dft_burnable/src/: basic.rs  burnable.did  burnable.rs  lib.rs  token.rs
src/dft_burnable_mintable/: Cargo.toml
src/dft_mintable/: Cargo.toml  build.rs
src/dft_mintable/src/: basic.rs  lib.rs  mintable.did  mintable.rs  token.rs
src/dft_receiver/: Cargo.toml  build.rs
src/dft_receiver/src/: lib.rs  receiver.did  receiver.rs
src/dft_standard/: Cargo.toml  README.md
src/dft_standard/src/: auto_scaling_storage.rs  http.rs  inspect.rs  lib.rs  management.rs  state.rs  token.rs  token_service.rs
src/dft_standard/src/service/: basic_service.rs  initialize_service.rs  internal_service.rs  management_service.rs  mod.rs
src/dft_standard/src/tests/: mod.rs  token_test.rs
src/dft_standard/src/token_service/: basic_service.rs  blockchain_service.rs  burnable_service.rs  initialize.rs  internal_service.rs  mintable_service.rs  mod.rs
src/dft_token/: Cargo.toml  build.rs
src/dft_token/src/: basic.rs  batch_mint.rs  batch_transfer.rs  burnable.rs  http.rs  lib.rs  management.rs  mintable.rs  token.did
src/dft_token/src/tests/: token_test.rs
src/dft_tx_storage/: Cargo.toml
src/dft_tx_storage/src/: actor.rs  lib.rs  service.rs  state.rs  storage.did  storage.rs
src/dft_tx_storage/src/types/: block_archive.rs  mod.rs  storage_setting.rs
src/dft_types/: Cargo.toml
src/dft_types/src/: account_identifier.rs  actor_response.rs  block.rs  blockchain.rs  constants.rs  errors.rs  fee.rs  http.rs  lib.rs  metadata.rs  stable_state.rs  token_allowances.rs  token_archive.rs  token_balances.rs  token_description.rs  token_fee.rs  token_holder.rs  token_info.rs  token_metadata.rs  token_metrics.rs  token_payload.rs  token_response.rs  token_setting.rs  token_transaction.rs  token_transaction_window.rs  transaction_result.rs  tx_record.rs
src/dft_utils/: Cargo.toml
src/dft_utils/src/: ic_logger.rs  image_utils.rs  lib.rs  principal.rs  range_utils.rs  sha256.rs
src/scripts/: createPackage.ts  generate.ts  index.ts  loadTestLedger.ts  reinstallAll.ts  reinstallLedger.ts  updateDid.ts  updateLocalConfigs.ts
src/token_tx_storage/: Cargo.toml
(+182 files in other folders)
