[package]
name = "dft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies] 
ic-nns-handler-root = { git="https://github.com/dfinity/ic" }
ledger-canister = { git="https://github.com/dfinity/ic" }
dfn_core = { git="https://github.com/dfinity/ic" }
dfn_protobuf = { git="https://github.com/dfinity/ic" }
dfn_candid = { git="https://github.com/dfinity/ic" }
ic-types = { git="https://github.com/dfinity/ic" }

serde = { version = "1.0.126", features = [ "derive", "rc" ] }
candid = "0.6.21"
lazy_static = "1.4.0"
