[package]
name = "dft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies] 
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
hex = {version = "0.4.2", features = ["serde"] }
crc32fast = "1.2.0"
candid = "0.6.21"
serde = "1.0.127"
sha2 = "0.9.1"
