[package]
name = "dft_burnable"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies] 
dft_standard = { path = "../dft_standard" }
dft_types = { path = "../dft_types" }
dft_utils = { path = "../dft_utils" }
ic-cdk = "0.3.3"
ic-cdk-macros = "0.3.3"
hex = {version = "0.4.3", features = ["serde"] }
crc32fast = "1.2.0"
candid = "0.7.10"
serde = "1.0.127"
serde_bytes = "0.11"
sha2 = "0.10.1"
num-bigint = "0.4.3"
lazy_static = "1.4.0"
