[package]
name = "dft_basic"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies] 
dft_standard = { path = "../dft_standard" }
dft_types = { path = "../dft_types" }
dft_utils = { path = "../dft_utils" }
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
hex = {version = "0.4.3", features = ["serde"] }
crc32fast = "1.3.2"
candid = "0.7.10"
serde = "1.0.135"
serde_bytes = "0.11"
sha2 = "0.10.2"
num-bigint = "0.4.3"
