[package]
name = "dft_basic"
version = "0.6.0"
edition = "2018"

[dependencies]
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
dft_types = { path = "../dft_types" }
dft_utils = { path = "../dft_utils" }

candid = "0.7.14"
serde = "1.0.137"
serde_bytes = "0.11"
getset = "0.1.2"
bincode = "1.3.3"
log = "0.4"
num-bigint =  {version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
async-trait = "0.1.53"

[dev-dependencies]
rstest = "0.15.0"
async-std = { version = "1.11", features = ["attributes"] }
mockall = "0.11.1"

[features]
default = ["logger"]
logger = ["dft_utils/logger"]
