[package]
name = "dft_basic"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Deland Labs Core Dev <delandlabs@gmail.com>"]
edition = "2021"
description = "Dfinity fungible token standard: baisc token crate."
homepage = "https://github.com/Deland-Labs/core-canister"
repository = "https://github.com/Deland-Labs/core-canister"

[dependencies]
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
dft_types = { path = "../dft_types" }
dft_utils = { path = "../dft_utils" }

candid = "0.8.4"
serde = "1.0.152"
serde_bytes = "0.11"
getset = "0.1.2"
bincode = "1.3.3"
log = "0.4"
num-bigint =  {version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
async-trait = "0.1.60"

[dev-dependencies]
rstest = "0.15.0"
async-std = { version = "1.12", features = ["attributes"] }
mockall = "0.11.3"

[features]
default = ["logger"]
logger = ["dft_utils/logger"]
