[package]
name = "dft_burnable"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dft_standard = { path = "../dft_standard" }
dft_types = { path = "../dft_types" }
dft_utils = { path = "../dft_utils" }
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
hex = {version = "0.4.3", features = ["serde"] }
crc32fast = "1.3.2"
candid = "0.7.14"
serde = "1.0.136"
serde_bytes = "0.11"
sha2 = "0.10.2"
num-bigint = "0.4.3"
json_pretty = "0.1.2"
log = "0.4"

[features]
default = ["dev_canister"]
dev_canister = ["dft_utils/dev_canister","dft_standard/dev_canister"]
staging_canister = ["dft_utils/staging_canister","dft_standard/staging_canister"]
production_canister = ["dft_utils/production_canister","dft_standard/production_canister"]
