[package]
name = "dft_receiver"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Deland Labs Core Dev <delandlabs@gmail.com>"]
edition = "2021"
description = "Dfinity fungible token standard: test environment receiver cansiter."
homepage = "https://github.com/Deland-Labs/core-canister"
repository = "https://github.com/Deland-Labs/core-canister"

[lib]
crate-type = ["cdylib"]

[dependencies] 
dft_types = { path = "../dft_types" }
dft_utils = { path = "../dft_utils" }
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
candid = "0.8.4"
log = "0.4"

[features]
default = ["logger"]
logger = ["dft_utils/logger"]