[package]
name = "dft_standard"
version = "0.4.0"
edition = "2018"

[dependencies] 
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
dft_types = { path = "../dft_types" }
dft_utils = { path = "../dft_utils" }

candid = "0.7.10"
serde = "1.0.135"
serde_bytes = "0.11"
json_pretty = "0.1.2"
getset = "0.1.2"

[dev-dependencies]
rstest = "0.12.0"