[package]
name = "dft_token"
version = "0.6.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dft_basic = { path = "../dft_basic" }
dft_burnable = { path = "../dft_burnable" }
dft_mintable = { path = "../dft_mintable" }
dft_types = { path = "../dft_types" }
dft_utils = { path = "../dft_utils" }
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
hex = {version = "0.4.3", features = ["serde"] }
crc32fast = "1.3.2"
candid = "0.7.16"
serde = "1.0.143"
serde_bytes = "0.11"
sha2 = "0.10.2"
num-bigint = "0.4.3"
json_pretty = "0.1.2"
log = "0.4"

[dev-dependencies]
rstest = "0.15.0"

[features]
default = ["basic","logger"]
logger = ["dft_utils/logger"]
basic=[]
burnable = []
mintable = []
batch_mint = []
batch_transfer = []
