[package]
name = "dft_tx_storage"
version = "0.6.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dft_types = { path = "../dft_types" }
dft_utils = { path = "../dft_utils" }
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
candid = "0.8.4"
serde = "1.0.152"
bincode = "1.3.3"
getset = "0.1.2"
log= "0.4.17"
num-bigint =  {version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"

[dev-dependencies]
rstest = "0.15.0"

[features]
default = ["logger"]
logger =["dft_utils/logger"]
