[package]
name = "dft_types"
version = "0.5.0"
edition = "2018"

[dependencies] 
ic-cdk = "0.5.0"
hex = {version = "0.4.3", features = ["serde"] }
crc32fast = "1.3.2"
candid = "0.7.14"
serde = "1.0.136"
serde_bytes = "0.11"
sha2 = "0.10.2"
anyhow = "1.0.57"
thiserror = "1.0"
getset = "0.1.2"
num-bigint =  {version = "0.4.3", features = ["serde"] }
num-traits = "0.2.14"
bincode = "1.3.3"