[package]
name = "dft_types"
version = "0.6.0"
edition = "2018"

[dependencies]
ic-cdk = "0.5.1"
hex = {version = "0.4.3", features = ["serde"] }
crc32fast = "1.3.2"
candid = "0.7.16"
serde = "1.0.143"
serde_bytes = "0.11"
sha2 = "0.10.2"
anyhow = "1.0.61"
thiserror = "1.0"
getset = "0.1.2"
num-bigint =  {version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
bincode = "1.3.3"
dft_utils = { path = "../dft_utils" }
