[package]
name = "dft_types"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Deland Labs Core Dev <delandlabs@gmail.com>"]
edition = "2021"
description = "Dfinity fungible token standard: typpe."
homepage = "https://github.com/Deland-Labs/core-canister"
repository = "https://github.com/Deland-Labs/core-canister"

[dependencies]
ic-cdk = "0.6.8"
hex = {version = "0.4.3", features = ["serde"] }
crc32fast = "1.3.2"
candid = "0.8.4"
serde = "1.0.152"
serde_bytes = "0.11"
sha2 = "0.10.6"
anyhow = "1.0.81"
thiserror = "1.0"
getset = "0.1.2"
num-bigint =  {version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
bincode = "1.3.3"
dft_utils = { path = "../dft_utils" }
