[package]
name = "dft_utils"
version = "0.5.0"
edition = "2018"

[dependencies]
ic-cdk = "0.5.0"
hex = { version = "0.4.3", features = ["serde"] }
candid = "0.7.14"
serde = "1.0.137"
num-bigint = "0.4.3"
crc32fast = "1.3.2"
base32 = "0.4.0"
log = "0.4"
env_logger = "0.9.0"
yansi = "0.5.1"
sha2 = "0.10.2"

[features]
default = []
logger = []
