[package]
name = "dft_utils"
version = "0.6.0"
license = "Apache-2.0"
authors = ["Deland Labs Core Dev <delandlabs@gmail.com>"]
edition = "2021"
description = "Dfinity fungible token standard: utils."
homepage = "https://github.com/Deland-Labs/core-canister"
repository = "https://github.com/Deland-Labs/core-canister"

[dependencies]
ic-cdk = "0.6.8"
hex = { version = "0.4.3", features = ["serde"] }
candid = "0.8.4"
serde = "1.0.152"
num-bigint = "0.4.3"
num-traits = "0.2.14"
crc32fast = "1.3.2"
base32 = "0.4.0"
log = "0.4"
env_logger = "0.11.3"
yansi = "0.5.1"
sha2 = "0.10.6"

[features]
default = []
logger = []
